# Matrix

./: .gitignore  CMakeLists.txt  main.cpp
inc/: common.hpp  jagged_array.hpp  matrix.hpp
tests/: CMakeLists.txt  generate_matrix.cpp  matrix_generator.cpp  test_end_to_end.sh  unit_tests.cpp
tests/inc/: generator.hpp
